add missing memcached server

--- a/ansible/cron-request.yaml
+++ b/ansible/cron-request.yaml
@@ -9,6 +9,6 @@
       cron:
         name: "haproxy-dynamic-weight-request"
         minute: "*/5"
-        job: "python3 /opt/haproxy-dynamic-weight/request-lb-weight.py "
-        cron_file: "/etc/cron.d/elfu"
+        job: "python3 /opt/haproxy-dynamic-weight/request-lb-weight.py 127.0.0.1:11211"
+        cron_file: "/etc/cron.d/req"
         user: root
